tests/sources/valid/for_zero_to_ten_print.minipl
var x: int;
for x in 0..10 do
print x;
end for;
