tests/sources/invalid/for_missing_variable.minipl
for in 1..10 do 
end for;